2004-10-16  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* nbconn.adb, nbconn_proc.adb, nbconn_sec.adb,
	  nbconn_sec.out, nbconn.out:
	Test for non blocking connection.

2004-10-12  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	(setup): Use complete template for find "--  ~ MAIN"
	 and only in the *.adb files.

2004-10-10  Pascal Obry  <pascal@obry.org>

	* generate.adb:
	Minor reformatting.

2004-10-09  Pascal Obry  <pascal@obry.org>

	* makefile:
	(AWSRES): Fix PATH based on BDIR.
	(WSDL2AWS): Idem.
	(ADA2WSDL): Idem.

	* soap5.out, soap6.out, soap7.out:
	Add missing ending empty line removed with last check-in.

	* tlog.adb:
	Use a single connection to ensure stable output.
        Minor reformatting.

2004-10-08  Pascal Obry  <pascal@obry.org>

	* makefile:
	(F_TOGETHER): Filter out generate.adb, this is not a test.

2004-10-08  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	Do not create BDIR macros, it sent from main makefile.
	Add dot before external BDIR macros, to be on one level apper.
	(build_drivers:) Add -largs -laws workaroung for GCC 3.4.2 bug.
	Put tlog into ALONE_TESTS.

	* soap5.out, soap6.out, soap7.out, sslcfg.out, upload4.out, wsdl_6.out,
	  wsdl_7.out, wsdl_b.out:
	Remove CR at end of line.

	* tlog.out:
	Update output.

2004-10-07  Pascal Obry  <pascal@obry.org>

	* regtests.gpr:
	Do not import ssl project.

2004-10-06  Pascal Obry  <pascal@obry.org>

	* makefile:
	Refine previous check-in. This version should behave correctly with
	 or without SOAP support.

	* unexph2.out:
	Update output.

2004-10-06  Pascal Obry  <pascal@obry.org>

	* makefile:
	(clean): Add filez.tmplt.

2004-10-06  Pascal Obry  <pascal@obry.org>

	* makefile.lst:
	Empty version needed by main makefile. This file will be generated
	 during the setup procedure.

	* regtests.gpr:
	Initialize GNAT Project Main attribute using the generated
	 regtest_lst.gpr project. Avoid the need to manually sync with
	 makefile.

	* makefile: